--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,17 +17,17 @@ repos:
     -   id: debug-statements
         language_version: python3
 
--   repo: https://github.com/PyCQA/flake8
-    rev: 3.9.2
-    hooks:
-    -   id: flake8
-        language_version: python3
+# -   repo: https://github.com/PyCQA/flake8
+#     rev: 3.9.2
+#     hooks:
+#     -   id: flake8
+#         language_version: python3
 
 -   repo: https://github.com/asottile/reorder_python_imports
     rev: v2.6.0
     hooks:
     -   id: reorder-python-imports
-        args: [--application-directories=.:src, --py36-plus]
+        args: ["--application-directories=.:src", --py36-plus]
 
 -   repo: https://github.com/asottile/pyupgrade
     rev: v2.29.0
@@ -35,9 +35,9 @@ repos:
     -   id: pyupgrade
         args: [--py36-plus]
 
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.910
-    hooks:
-    -   id: mypy
-      # files: ^src/
-        args: []
+# -   repo: https://github.com/pre-commit/mirrors-mypy
+#     rev: v0.910
+#     hooks:
+#     -   id: mypy
+#       # files: ^src/
+#         args: []
